let sequential download as default

--- a/src/webui/www/private/download.html
+++ b/src/webui/www/private/download.html
@@ -84,7 +84,7 @@
                             <label for="skip_checking">QBT_TR(Skip hash check)QBT_TR[CONTEXT=AddNewTorrentDialog]</label>
                         </td>
                         <td>
-                            <input type="checkbox" id="skip_checking" name="skip_checking" value="true" />
+                            <input type="checkbox" id="skip_checking" name="skip_checking" value="true" checked />
                         </td>
                     </tr>
                     <tr>
