Set sequential download as default

--- a/src/webui/www/private/download.html
+++ b/src/webui/www/private/download.html
@@ -104,7 +104,7 @@
                             <label for="sequentialDownload">QBT_TR(Download in sequential order)QBT_TR[CONTEXT=TransferListWidget]</label>
                         </td>
                         <td>
-                            <input type="checkbox" id="sequentialDownload" name="sequentialDownload" value="true" />
+                            <input type="checkbox" id="sequentialDownload" name="sequentialDownload" value="true" checked />
                         </td>
                     </tr>
                     <tr>
